--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,54 +1,64 @@
 .Weather {
   border: 1px solid #dadde1;
-  color: rgb(135, 135, 135);
+  font-family: Arial, Helvetica, sans-serif;
   padding: 16px;
   border-radius: 4px;
 }
 
+.Weather form {
+  margin-bottom: 20px;
+}
 
 .Weather h1 {
-  color: violet;
-  font-size: 24px;
-  font-weight: 100;
+  color: rgb(174, 62, 218);
   margin: 20px 0 0 0;
-  line-height: 29px;
+  font-size: 19px;
+  font-weight: 700;
+  line-height: 22px;    
 }
+
+
 .Weather ul {
   margin: 0;
   padding: 0;
 }
 
 .Weather li {
-  font-size: 16px;
-  font-weight: 100;
-  line-height: 19px;
-  list-style: none;
+  color: rgb(94, 94, 94);
+  color-scheme:light;
+  display: block;
+  font-size: 12px;
+  font-weight: 400;
+  height: 16px;
+  line-height: 16px;
 }
 
-.Weather img {
- height:64px;
- margin-right:10px;
- display: inline-block; 
-}
 
 .Weather .temperature {
-  font-weight: bold;
-  color: rgb(33, 33, 33);
-  font-size: 64px;
-  line-height: 64px;
+  color: rgb(32, 33, 36);
+  display: inline;
+  font-size: 48px;
   font-weight: 400;
-  
+  height: auto;
+  letter-spacing: normal;
+  line-height: 64px;
 }
 
 .Weather canvas {
-  margin: 10px auto;
+  margin-right: 10px;
+  margin-top: 5px;
+  display: inline;
 }
 
 .Weather .unit {
-  color: rgb(33, 33, 33);
+  color: rgb(94, 94, 94);
   font-size: 16px;
   font-weight: 400;
   position: relative;
+  top: -22px;
   line-height: 1;
-  top: -34px;
-}
+  }
+
+  .Weather a {
+      text-decoration: none;
+  }
