--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,6 +1,3 @@
-
-
-
 .Weather {
   border: 1px solid #dadde1;
   font-family: monospace;
@@ -8,15 +5,14 @@
   border-radius: 4px;
   background-image: url(https://images.pexels.com/photos/907485/pexels-photo-907485.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
   background-repeat: no-repeat;
-    background-size: cover;
-    box-shadow: 0 30px 50px rgba(185, 168, 226, 0.08);
-    border-radius: 15px;
-    margin: 45px auto;
-    padding: 30px 30px 10px 30px;
-    max-width: 600px;
-    max-height: 1500px;
-    padding-bottom: 100px;
-
+  background-size: cover;
+  box-shadow: 0 30px 50px rgba(185, 168, 226, 0.08);
+  border-radius: 15px;
+  margin: 45px auto;
+  padding: 30px 30px 10px 30px;
+  max-width: 600px;
+  max-height: 1500px;
+  padding-bottom: 100px;
 }
 
 .Weather form {
@@ -78,10 +74,10 @@
 
 .Weather a {
   text-decoration: none;
+  color: rgb(211, 72, 169);
 }
 
-
-  body {
+body {
   background-color: antiquewhite;
   font-family: monospace;
-  } 
+}
